fixed dark mode hover styles for outlined primary button, font weight, ohm menu font sizing and divider fix

--- a/src/style.scss
+++ b/src/style.scss
@@ -91,11 +91,9 @@ body {
   }
 }
 
-.ohm-input {
-  input::-webkit-outer-spin-button,
-  input::-webkit-inner-spin-button {
-    -webkit-appearance: none !important;
-  }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none !important;
 }
 
 a:hover svg {
