--- a/src/views/Bond/bondSettings.scss
+++ b/src/views/Bond/bondSettings.scss
@@ -3,8 +3,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  backdrop-filter: blur(15px);
-  -webkit-backdrop-filter: blur(15px);
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+  background-color: #33333333;
   .ohm-popover {
     max-width: 500px;
     display: flex;
